[gd_scene load_steps=2 format=3 uid="uid://ccvr8ydq11avq"]

[ext_resource type="Script" uid="uid://df0d4j4udsbgr" path="res://scripts/character_card.gd" id="1_wwhfa"]

[node name="CharacterCard" type="Control"]
custom_minimum_size = Vector2(260, 420)
layout_mode = 3
anchors_preset = 0
offset_right = 240.0
offset_bottom = 340.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_wwhfa")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12
alignment = 1

[node name="CharacterImage" type="TextureRect" parent="Panel/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
stretch_mode = 5

[node name="CharacterName" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="BtnSelect" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
